--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 layout: home
 title: Trioptre's Website
 subtitle: This is where I will tell my friends way too much about me
+use-site-title: true
 ---
